# optiq

./: .cursorrules  PINECONE_SETUP.md  README.md  bun.lockb  package-lock.json  package.json
backend/: main.py  pyproject.toml
drizzle/: 0000_init_database.sql  0001_gifted_shiva.sql  0002_add_notes_table.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
lib/db/: schema.ts
scripts/: wipe-pinecone.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/upload/: route.ts
src/app/api/verify-answer/: route.ts
src/app/api/webrtc/offer/: route.ts
src/components/: app-sidebar.tsx  assistant.tsx  pipecat-voice-agent.tsx  right-sidebar.tsx
src/components/assistant-ui/: citations.tsx  flashcard-ui.tsx  markdown-text.tsx  mindmap-ui-improved.tsx  mindmap-ui.tsx  notes-ui.tsx  quiz-ui.tsx  search-ui.tsx  thread.tsx  tooltip-icon-button.tsx
src/components/ui/: dialog.tsx
src/lib/: document-parser.ts  pinecone.ts  rag-ingestion.ts  text-chunker.ts
src/lib/actions/: lessons.ts  notes.ts  resources.ts
src/lib/db/: schema.ts
